--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,20 +19,22 @@ li {
 
 .logoimg {
     height: 60px;
-    width: 60px;
-    margin-left: 30px;
-    margin: 20px 0;
+    width: 100%;
+    max-width: 150px;
+    margin: 10px 0;
     img {
         height: 100%;
         width: 100%;
+        margin-left: 30px;
     }
 }
 
 .topheader {
-    background-color: #862929;
+    background-color: #d42020;
 }
 
 .header {
+    position: relative;
     max-width: 1024px;
     margin: 0 auto;
     display: flex;
@@ -40,19 +42,63 @@ li {
 }
 
 .menu {
-    display: flex;
-    justify-content: space-around;
-    color: #fff;
     >li {
+        cursor: pointer;
         font-size: 20px;
         margin: 0 10px;
         display: flex;
         align-items: center;
+        font-weight: bold;
+        letter-spacing: 1px;
     }
 }
 
+.navbar-light .navbar-nav .nav-link {
+    color: white;
+}
+
+.navbar-toggler {
+    position: absolute;
+    top: 20px;
+    right: 50px;
+}
+
 .swiper-container {
-    height: 600px;
+    height: 85vh;
+}
+
+.div2 .swiper-slide {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+.b1 {
+    background: url('../images/banner/banner1.jpg');
+}
+
+.b2 {
+    background: url('../images/banner/banner2.jpg');
+}
+
+.b3 {
+    background: url('../images/banner/banner3.jpg');
+}
+
+.b4 {
+    background: url('../images/banner/banner4.jpg');
+}
+
+.b5 {
+    background: url('../images/banner/banner5.jpg');
+}
+
+.b6 {
+    background: url('../images/banner/banner6.jpg');
+}
+
+.b7 {
+    background: url('../images/banner/banner7.jpg');
 }
 
 .swiper-wrapper {
@@ -64,14 +110,330 @@ li {
 
 .main {
     >p {
-        font-size: 20px;
+        font-size: 24px;
         color: black;
         letter-spacing: 2px;
-        margin: 20px 0 10px 0;
+        margin: 0px 0 10px 0;
         font-weight: bold;
+        text-align: center;
     }
-    >div {
+    .uper {
+        text-align: center;
+        text-transform: uppercase;
+        color: #818181fd;
+        font-size: 32px;
+        margin-top: 10px;
+    }
+}
+
+.brandbox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+    .service {
+        position: relative;
+        &::before {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 110%;
+            background-color: rgba(0, 0, 0, 0.1);
+            left: 0;
+            top: -5%;
+        }
+        &::after {
+            content: '';
+            position: absolute;
+            width: 1px;
+            height: 110%;
+            background-color: rgba(0, 0, 0, 0.1);
+            right: 0;
+            top: -5%;
+        }
+    }
+    .service>div {
+        height: 180px;
+        width: 250px;
+        position: relative;
+        padding: 20px;
+        border-top: 1px solid rgba(0, 0, 0, 0.1);
+        border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: all 0.7s;
+        overflow: hidden;
+        img {
+            width: 100%;
+            height: 100%;
+        }
+        a {
+            padding: 10px;
+            position: absolute;
+            transition: all 1s;
+            text-transform: uppercase;
+            color: red;
+            background-color: #fff;
+            bottom: -30px;
+            right: 0;
+        }
+        &:hover {
+            background-color: #d42020;
+            transition: all 0.7s;
+        }
+        &:hover .flut {
+            transition: all 1s;
+            bottom: 0;
+        }
+    }
+    .s2>div {
+        a {
+            color: #15c8ff;
+        }
+        &:hover {
+            background-color: #15c8ff;
+        }
+    }
+    .s3>div {
+        a {
+            color: #53f05b;
+        }
+        &:hover {
+            background-color: #53f05b;
+        }
+    }
+}
+
+.div3 {
+    background: url('../images/bg_IMG_0063.jpg') no-repeat center;
+    background-size: cover;
+    position: relative;
+    min-height: 600px;
+    h3 {
+        color: #a0a0a0;
+        font-size: 3em;
+        padding-top: 80px;
+        margin-bottom: 0px;
+    }
+    h1 {
+        color: #fff;
+        font-weight: bold;
+        margin-bottom: 20px;
+    }
+    p {
+        color: #fff;
+        font-weight: bold;
+        font-size: 18px;
+    }
+}
+
+.div4 {
+    h1 {
+        text-align: center;
+        margin-top: 20px;
+    }
+    .swiper-container {
+        width: 100%;
+        padding-top: 50px;
+        padding-bottom: 50px;
+        height: auto;
+    }
+    .swiper-slide {
+        background-position: center;
+        background-size: cover;
+        width: 250px;
+        height: 250px;
+    }
+    .p1 {
+        background: url('../images/product/p1.png') no-repeat center;
+        background-size: contain;
+    }
+    .p2 {
+        background: url('../images/product/p2.png') no-repeat center;
+        background-size: contain;
+    }
+    .p3 {
+        background: url('../images/product/p3.png') no-repeat center;
+        background-size: contain;
+    }
+    .p4 {
+        background: url('../images/product/p4.jpg') no-repeat center;
+        background-size: contain;
+    }
+    .p5 {
+        background: url('../images/product/p5.png') no-repeat center;
+        background-size: contain;
+    }
+    .p6 {
+        background: url('../images/product/p6.png') no-repeat center;
+        background-size: contain;
+    }
+    .p7 {
+        background: url('../images/product/p7.png') no-repeat center;
+        background-size: contain;
+    }
+    .p8 {
+        background: url('../images/product/p8.png') no-repeat center;
+        background-size: contain;
+    }
+    .p9 {
+        background: url('../images/product/p9.png') no-repeat center;
+        background-size: contain;
+    }
+    .p10 {
+        background: url('../images/product/p10.png') no-repeat center;
+        background-size: contain;
+    }
+    .p11 {
+        background: url('../images/product/p11.jpg') no-repeat center;
+        background-size: contain;
+    }
+    .p12 {
+        background: url('../images/product/p12.jpg') no-repeat center;
+        background-size: contain;
+    }
+    .p13 {
+        background: url('../images/product/p13.png') no-repeat center;
+        background-size: contain;
+    }
+    .p14 {
+        background: url('../images/product/p14.png') no-repeat center;
+        background-size: contain;
+    }
+}
+
+.footer {
+    background-color: #292929;
+    .container {
         display: flex;
-        justify-content: space-around;
+        flex-wrap: wrap;
+        justify-content: center;
+        p {
+            color: #fff;
+            font-size: 1vw;
+            margin: 20px 10px;
+        }
+    }
+}
+
+.me {
+    position: fixed;
+    height: 100%;
+    width: 40%;
+    left: -100%;
+    transition: all 0.5s;
+    background: #d42020;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    z-index: 99;
+    &.active {
+        left: 0;
+        transition: all 0.5s;
+    }
+    a {
+        font-size: 20px;
+        margin: 20px 0;
+        color: #fff;
+        font-weight: bold;
+        letter-spacing: 1px;
+        &:hover {
+            text-decoration: none;
+        }
+    }
+}
+
+main {
+    position: absolute;
+    right: 0;
+    top: 20px;
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    text-shadow: 3px 2px 0 #1d9d74, 6px 5px 0 rgba(0, 0, 0, .15);
+}
+
+.hamburger {
+    display: none;
+    cursor: pointer;
+    margin: auto;
+    transform: rotate(0);
+    transition: .5s ease-in-out;
+    width: 60px;
+}
+
+.hamburger div {
+    background: #fff;
+    border-radius: 9px;
+    display: block;
+    height: 5px;
+    left: 0;
+    position: absolute;
+    transform: rotate(0);
+    transition: .25s ease-in-out;
+    width: 40px;
+}
+
+.hamburger div:nth-child(1) {
+    top: 8px;
+}
+
+.hamburger div:nth-child(2),
+.hamburger div:nth-child(3) {
+    top: 18px;
+}
+
+.hamburger div:nth-child(4) {
+    top: 29px;
+}
+
+.hamburger.open div:nth-child(1),
+.hamburger.open div:nth-child(4) {
+    left: 50%;
+    top: 18px;
+    width: 0%;
+}
+
+.hamburger.open div:nth-child(2) {
+    background: #bbb;
+    transform: rotate(45deg);
+}
+
+.hamburger.open div:nth-child(3) {
+    background: #bbb;
+    transform: rotate(-45deg);
+}
+
+.collapse:not(.show) {
+    display: flex;
+    flex-basis: auto;
+}
+
+.navbar-nav {
+    flex-direction: row;
+}
+
+@media screen and (max-width: 768px) {
+    .navbar {
+        display: none;
+    }
+    .hamburger {
+        display: block;
+    }
+    .brandbox .service>div {
+        height: 150px;
+        width: 200px;
+        a {
+            font-size: 12px;
+        }
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .brandbox {
+        flex-direction: column;
+        .service {
+            margin: 20px 0;
+        }
     }
 }
